fix testimonials content spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -734,6 +734,11 @@ body {
     padding: 6.2rem 6.1rem 0 6rem;
   }
 }
+@media only screen and (min-width: 68.125rem) {
+  .testimonials__content {
+    padding: 10.31rem 8.75rem;
+  }
+}
 .testimonials__heading {
   font-size: 2rem;
   line-height: 32px;
@@ -830,9 +835,19 @@ body {
     top: -18%;
   }
 }
+@media only screen and (min-width: 68.125rem) {
+  .testimonials__quote-svg {
+    top: -10%;
+  }
+}
 
 div.testimonials__box:nth-child(3) {
   margin-bottom: 6rem;
+}
+@media only screen and (min-width: 68.125rem) {
+  div.testimonials__box:nth-child(3) {
+    margin: 0;
+  }
 }
 
 .contact {
